# d3d-graphicengine

./: .gitignore  CMakeLists.txt
scripts/: FetchLibraries.cmake
src/: CMakeLists.txt  main.cpp  utilities.h
src/Core/: Object.cpp  Object.h  Renderer.cpp  Renderer.h  RendererManager.h  Window.cpp  Window.h
src/Shaders/: PS_Test.hlsl  VS_Test.hlsl
